--- a/README
+++ b/README
@@ -1,10 +1,3 @@
-Read the file called DISCLAIMER.
-
-On Freebsd, type "gmake".
-On other platforms, type "make" (as long as this is gnu make).
-
-For FAQs, updated source code, and the lost chapter, see http://www.apuebook.com.
-Please direct questions, suggestions, and bug reports to sar@apuebook.com.
-
-Steve Rago
-January 2013
+This is a project for all sample source codes of the book Advanced Programming in the UNIX Environment based on xmake as build tool. 
+Only for learning purpose. 
+Still in progress.
