--- a/README
+++ b/README
@@ -1,3 +1,20 @@
 This is a project for all sample source codes of the book Advanced Programming in the UNIX Environment based on xmake as build tool. 
 Only for learning purpose. 
 Still in progress.
+
+
+
+- Build and Run
+
+```shell
+xmake b [target] / xmake
+xmake r [target]
+
+example:
+xmake b hello
+xmake r hello
+```
+- Show targets
+```shell
+xmake show -l targets
+```
